Small styling fix for accordion and its' display settings, added touch events for carousels, carousels doesn't work on mobile yet

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -733,6 +733,7 @@ a {
             width: 100%;
             padding: 1.5rem 0;
             background-color: $themeWhite;
+            cursor: pointer;
 
             .accordion-title {
                 font-family: $fontRaleway;
